# SDL

./: .gitignore  CMakeLists.txt  Project_SDL1.cpp  README.md  SDL2Test  main.cpp
part1/: CMakeLists.txt  Project_SDL1.h
src/: main.cpp
src/ECS/: application.cpp  component.cpp  entity.cpp  window.cpp
src/ECS/components/: basic.hpp  sdl_components.hpp
src/ECS/include/: application.hpp  component.hpp  coordinator.hpp  entity.hpp  math.hpp  system.hpp  types.hpp  window.hpp
src/ECS/systems/: AI.cpp  AI.hpp  DangerPath.cpp  DangerPath.hpp  DogPath.cpp  DogPath.hpp  GameState.cpp  GameState.hpp  PlayerSystem.cpp  PlayerSystem.hpp  RandomPath.cpp  RandomPath.hpp  SpeedSystem.cpp  SpeedSystem.hpp  render.cpp  render.hpp
